
	* imaputil.c, imapcommands.c (_ic_search): introduce sort_search which
	optimizes the search keys.
	* dbmail-message.c, pipe.c, main.c, lmtp.c: move chunks of the insertion 
	logic to dbmail-message.c.
	* check_dbmail_message.c, Makefile.am: added another test suite.
	* lib/iniparser-2.14/Makefile.orig, lib/iniparser-2.14/test/Makefile:
	removed redundant files.

2005-01-22  Ilja Booij <ilja@ic-s.nl>

	* sql/mysql/migrate_from_1.x_to_2.0.mysql: applied patch by
	Christian Haugg to make script work on MySQL 4.1.x

	* sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: applied patch by
	Christian Haugg to make script work on MySQL 4.1.x

2005-01-19  Ilja Booij  <ilja@ic-s.nl>

	* INSTALL.postfix: updated information, mainly for Postfix 2.0
	users.

2005-01-18  Aaron Stone  <aaron@serendipity.cx>

	* user.c (do_show): return -1 if userspec is neither a user nor an
	alias. Fixes bug #163.

2005-01-18  Paul Stevens <paul@nfg.nl>
	
	* imapcommands.c (_ic_store): treat seqnum of 0xffffffff as '*' to
	accomodate outlook express.
	* pool.c: use different shm lockfiles per daemon.
	* imaputil.c: fix plist construction.

2005-01-14  Paul Stevens <paul@nfg.nl>

	* db.h, mysql/dbmysql.c, pgsql/dbpgsql.c (db_check_connection): moved
	static function to db.h so we can call db_check_connection from
	serverchild.c.
	* serverchild.c: call db_check_connection before each incoming
	connection (closes #156).
	* imap4.c, pop3.c, lmtp.c: call db_check_connection before handling
	commands.
	* serverchild.c: remove non-functional SIGPIPE handler so we can allow
	libmysql to use it's own handler in mysql_ping.
	* imapcommands.c (_ic_search): only resync mailbox if
	out-of-sync detected.
	* imaputil.c: removed unused functions retrieve_structure and
	show_address_list.
	* imapcommands.c (_ic_search), imaputil.c (perform_imap_search),
	dbsearch.c (db_search_parsed, db_sort_parsed): try to be smarter about
	retrieving messages when searching/sorting.

2005-01-08  Paul Stevens <paul@nfg.nl>
